add a conditional in users _form so that user is only prompted for password when they are signing up and utalize user_params when udating user

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -22,9 +22,10 @@
     <br><br>
   <%end%>
 
-  <label>Password</label><br>
-  <%= f.password_field :password %><br><br>
-
+  <%if @user.username == nil %>
+    <label>Password</label><br>
+    <%= f.password_field :password %><br><br>
+  <%end%>
 
   <%= f.submit  %>
 <% end %>
