deleted name and email requrements

--- a/app/views/routines/index.html.erb
+++ b/app/views/routines/index.html.erb
@@ -10,7 +10,7 @@
 
 <%else%>
 
-  <h1><%=current_user.name%>, here are your routines:</h1>
+  <h1><%=current_user.username%>, here are your routines:</h1>
 
   <%@routines.each do |routine|%>
     <br>
