--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,17 +1,17 @@
 
-<h1>Hello <%=@user.name%>! </h1>
+<h1>Hello <%=@user.username%>! </h1>
 
 You have <%= link_to(@user.number_of_routines.to_s + " " + "routine".pluralize(@user.number_of_routines), user_routines_path(@user)) %>
 consisting of <%= link_to(@user.number_of_tasks.to_s + " " + "task".pluralize(@user.number_of_tasks), user_tasks_path(@user)) %>
 <br>
 <br>
 <br>
-<h3>_____________________________CURRENT_ROUTINE_______________________________</h3>
+<h3>_____________________________CURRENT_ROUTINES_______________________________</h3>
 
 
 <% if !@user.current_routine.empty?%>
       <% @user.current_routine.each do |routine|   %>
-        
+
         <% if UserRoutine.find_by(user: @user, routine: routine).priority == 'high' %>
             <b><%=routine.name%> (<%=Routine.convert_from_24(routine.start_time)%> to <%=Routine.convert_from_24(routine.end_time)%>)</b><br>
         <%else%>
@@ -31,7 +31,7 @@ consisting of <%= link_to(@user.number_of_tasks.to_s + " " + "task".pluralize(@u
 <br>
 <br>
 <br>
-<h3>_____________________________UPCOMING_ROUTINE_______________________________</h3>
+<h3>_____________________________UPCOMING_ROUTINES_______________________________</h3>
 
 
 <% if !@user.upcoming_routine.nil? &&  @user.upcoming_routine.class.to_s != "Array"%>
