--- a/app/views/routines/index.html.erb
+++ b/app/views/routines/index.html.erb
@@ -2,7 +2,7 @@
 
 <% if @routines == nil %>
 
-  <h1>Here Are All Of The Routines!</h1>
+  <h1>Here are all of the routines on the platform!</h1>
 
   <%Routine.order_by_start_time.each do |routine|%>
     <%=link_to( routine.name, routine_path(routine))%>(<%=Routine.convert_from_24(routine.start_time)%> - <%=Routine.convert_from_24(routine.end_time)%>) <br>
