--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -37,6 +37,10 @@ You can create more routines <%= link_to('here', new_user_routine_path(@user))%>
 
 <% if !@user.upcoming_routine.nil? &&  @user.upcoming_routine.class.to_s != "Array"%>
     <%= link_to(@user.upcoming_routine.name, routine_path(@user.upcoming_routine))%> ( <%=Routine.convert_from_24(@user.upcoming_routine.start_time)%> to <%=Routine.convert_from_24(@user.upcoming_routine.end_time)%> )  <br>
+<% elsif !@user.upcoming_routine.nil? &&  @user.upcoming_routine.class.to_s == "Array"%>
+      <%@user.upcoming_routine.each do |rout|%>
+          <%= link_to(rout.name, routine_path(rout))%> ( <%=Routine.convert_from_24(rout.start_time)%> to <%=Routine.convert_from_24(rout.end_time)%> )  <br>
+      <%end%>
 <% else %>
     You do not have an upcoming routine for the day! <br>
     You can browse exiting ones <%= link_to('here', routines_path)%> or create your own <%= link_to('here', new_user_routine_path(@user))%>!
